--- a/dendron.2021.12.20.162321212.migrate-configs.yml
+++ b/dendron.2021.12.20.162321212.migrate-configs.yml
@@ -1,6 +1,7 @@
-version: 4
+version: 3
 useFMTitle: true
 useNoteTitleForLink: true
+noLegacyNoteRef: true
 site:
     copyAssets: true
     siteHierarchies:
@@ -21,8 +22,6 @@ commands:
             selectionMode: extract
             confirmVaultOnCreate: false
             leaveTrace: false
-            bubbleUpCreateNew: true
-            fuzzThreshold: 0.2
     insertNote:
         initialValue: templates
     insertNoteLink:
@@ -75,15 +74,9 @@ workspace:
         createTaskSelectionType: selection2link
     enableUserTags: true
     enableHashTags: true
-    dendronVersion: 0.73.1
-    enableEditorDecorations: true
+    dendronVersion: 0.68.1
 mermaid: true
 useKatex: true
+usePrettyRefs: true
 dev:
     enablePreviewV2: true
-preview:
-    enableFMTitle: true
-    enableNoteTitleForLink: true
-    enableMermaid: true
-    enablePrettyRefs: true
-    enableKatex: true
